--- a/index.html
+++ b/index.html
@@ -1,31 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gustavo's Personal Site</title>
-    <link
-      href="https://fonts.cdnfonts.com/css/glacial-indifference-2"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!-- Hero -->
-    <div class="beginning">
-      <nav class="nav-bar">
-        <a href="" class="nav-item">Beginning</a>
-        <a href="" class="nav-item">Resume</a>
-        <a href="" class="nav-item">Projects</a>
-        <a href="" class="nav-item">About me</a>
-        <a href="" class="nav-item">Contact</a>
-      </nav>
-      <div class="introduction">
-        <h1 class="my-name">Gustavo F. Marcial</h1>
-        <p class="my-description">
-          Just a guy learning how to code to have a better job :)
-        </p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gustavo's Personal Site</title>
+  <link href="https://fonts.cdnfonts.com/css/glacial-indifference-2" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <!-- Beginning -->
+  <div class="beginning">
+    <div class="introduction">
+      <h1 class="my-name">Gustavo F. Marcial</h1>
+      <p class="my-description">
+        Just a guy learning how to code to have a better job :)
+      </p>
+    </div>
+  </div>
+
+  <!-- Resume -->
+  <div class="resume">
+    <div class="my-picture">
+      <img src="./assets/images/my-picture.jpeg" alt="a smiling man">
+    </div>
+    <div class="my-informations">
+      <div class="education">
+        <h2 class="my-informations-subtitle">
+          Education
+        </h2>
+        <ul>
+          <li>
+            <p>Logistics Technician at IFMT VG</p>
+          </li>
+          <li>
+            <p>Logistics Technologist at College Invest</p>
+          </li>
+          <li>
+            <p>Full Stack Web Developer at Udemy</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="work-experience">
+        <h2 class="my-informations-subtitle">
+          Work Experience
+        </h2>
+        <ul>
+          <li>
+            <p>Buyer at Guaporé Vidros</p>
+          </li>
+          <li>
+            <p>Trainee at Carvalima Transportes</p>
+          </li>
+          <li>
+            <p>Production Assistant at Marfrig</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="skills">
+        <h2 class="my-informations-subtitle">
+          Skills
+        </h2>
+        <ul>
+          <li>
+            <p>Excel, Word and PowerPoint</p>
+          </li>
+          <li>
+            <p>Intermediate English</p>
+          </li>
+          <li>
+            <p>HTML and CSS</p>
+          </li>
+        </ul>
       </div>
     </div>
-  </body>
+  </div>
+
+  <div class="teste"></div>
+
+  <!-- Projects -->
+  <div class="projects">
+    <h2 class="projects-title">Projects</h2>
+    <div class="projects-container">
+      <div class="tindog-project">
+        <a href="https://gustavofmarcial.github.io/site-using-bootstrap/"><img id="tindog-img"
+            src="./assets/images/tindog.png" alt=""></a>
+        <h3>TinDog</h3>
+        <p>This was my first site using Bootstrap, <br>it is called TinDog, a Tinder for dogs. </p>
+      </div>
+      <div class="mondrian-project">
+        <a href="https://gustavofmarcial.github.io/mondrian_painting/"><img id="mondrian-img"
+            src="./assets/images/mondrian-painting.png" alt=""></a>
+        <h3>Mondrian painting</h3>
+        <p>It's a piece of art inspired in Mondrian, <br>I used only Grid to achieve this style.</p>
+      </div>
+      <div class="agency-project">
+        <a href="https://gustavofmarcial.github.io/responsive_site/"><img id="agency-img"
+            src="./assets/images/agency-project.png" alt=""></a>
+        <h3>Design Agency</h3>
+        <p>A Design Agency project, my first <br>responsive web site.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- About me -->
+  <div class="about-me">
+    <div class="my-picture2">
+      <img id="my-picture2" src="./assets/images/my-picture2.jpeg" alt="a smiling man">
+    </div>
+    <div class="my-informations2">
+      <ol>
+        <li>I love to play games like League of Legends, but Ragnarok Online is my passion</li>
+        <li>During weekends probably I will stay home, I'm a little antisocial</li>
+        <li>Rick n Morty is my favorite series, I go crazy with the episodes</li>
+        <li>I love to eat sweets, especially the hot ones</li>
+        <li>No, I don't drink alcohol XD</li>
+      </ol>
+    </div>
+  </div>
+
+  <!-- Contact -->
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+    </footer>
+  </div>
+</body>
+
 </html>
