now this is the actual final comit

--- a/index.html
+++ b/index.html
@@ -124,16 +124,14 @@
   </div>
 
   <!-- Contact -->
-  <div class="container">
+  <div class="container" id="contact">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a href="https://www.linkedin.com/in/gustavo-f-marcial-3548301a1/" class="nav-link px-2 text-black">LinkedIn</a></li>
+        <li class="nav-item"><a href="https://www.instagram.com/gustavof.marcial/?next=%2F" class="nav-link px-2 text-black">Instagram</a></li>
+        <li class="nav-item"><a href="https://github.com/GustavoFMarcial" class="nav-link px-2 text-black">GitHub</a></li>
       </ul>
-      <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+      <p class="text-center text-black">©2024 - Gustavo F. Marcial</p>
     </footer>
   </div>
 </body>
